CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE(COMMON.cmake)

PROJECT(PowerCMakeTest)

# 第三方库
LINK_DIRECTORIES(${ROOT}/lib)
INCLUDE_DIRECTORIES(${ROOT}/include)

# 设置二进制文件输出目录
IF(WIN32)
    SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/dist)
    SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/dist)
    ADD_DEFINITIONS(-D_UNICODE)
ELSE()
    SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/dist/bin)
    SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/dist/bin)
ENDIF()

SET(BUILD_SHARED_LIBS ON)

ADD_SUBDIRECTORY(src)
